<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kcl_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.DataNotFoundActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:background="@color/kcl_grey_bar"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp">

        <ImageButton
            android:id="@+id/not_found_bar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="#00000000"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_page_error"
            android:textSize="24sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/analysis_board"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/kcl_header_blue"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/analysis_board_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/error_page_sorry"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/analysis_board_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/error_page_heade_title"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:src="@mipmap/not_found_page_bg"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:text="@string/not_found_share_data_not_found"/>

                <TextView
                    android:id="@+id/not_found_back_btn"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="45dp"
                    android:background="@drawable/general_corner_bg"
                    android:gravity="center"
                    android:text="@string/error_page_btn_hints"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/start_date" />
            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>